--- a/web/src/core/less/global.less
+++ b/web/src/core/less/global.less
@@ -1,3 +1,6 @@
+@banner-height: 90px;
+@global-width: 1000px;
+
 .border {
   border: 1px solid #000;
 }
@@ -5,5 +8,8 @@
   align-items: center;
   justify-content: center;
 }
+.min-width {
+  min-width: @global-width;
+}
 @import './color.less';
-@import './u-antdv.less';
+@import './antdv.less';
