全局样式修改

--- a/web/src/core/less/global.less
+++ b/web/src/core/less/global.less
@@ -1,6 +1,3 @@
-@banner-height: 90px;
-@global-width: 1000px;
-
 .border {
   border: 1px solid #000;
 }
@@ -8,8 +5,8 @@
   align-items: center;
   justify-content: center;
 }
-.min-width {
-  min-width: @global-width;
-}
+
+.text-center {text-align: center;}
+.text-right {text-align: right;}
 @import './color.less';
 @import './antdv.less';
