--- a/web/src/core/less/antdv.less
+++ b/web/src/core/less/antdv.less
@@ -24,6 +24,10 @@
       .ant-select-selection-selected-value {
         color: #686868;
       }
+      .textarea {
+        height: 120px;
+        resize: none;
+      }
     }
   }
 }
