--- a/web/src/core/less/antdv.less
+++ b/web/src/core/less/antdv.less
@@ -6,11 +6,22 @@
     margin: 0;
   }
 }
+.search-form,.form {
+  .ant-form-item-label {
+    width: 105px;
+  }
+}
+
+.modal-form {
+  .ant-form-item-label {
+    width: 135px;
+  }
+}
+
 .search-form,.modal-form,.form {
   .ant-form-item {
     display: flex;
     .ant-form-item-label {
-      width: 105px;
       text-align: right;
     }
     .ant-form-item-control-wrapper {
